# laklak-chat

./: .gitignore  Cargo.toml  README.md
laklak-chat-server/: Cargo.toml  README.md
laklak-chat-server/config/: default.toml
laklak-chat-server/src/: config.rs  main.rs
laklak-chat-server/src/actors/: chat.rs  chat_io.rs  chat_server.rs  messages.rs  mod.rs
laklak-command-builder/: Cargo.toml
laklak-command-builder/src/: lib.rs
laklak-command-builder/tests/: test_type.rs
laklak-command-codec/: Cargo.toml
laklak-command-codec/src/: lib.rs
laklak-command-codec/tests/: test_command.rs
laklak-commands/: Cargo.toml
laklak-commands/src/: assertions.rs  codec.rs  commands.rs  lib.rs
laklak-commands/tests/: create_commands.rs
laklak-common/: Cargo.toml  README.md
laklak-common/src/: codec.rs  commands.rs  interpreter.rs  lib.rs  parser.rs  settings.rs
laklak-common/tests/: test_codec.rs  test_interpreter.rs  test_parser.rs
