[package]
name = "laklak-common"
version = "0.1.0"
authors = ["Yalin <yalin.gunayer@gmail.com>"]

[dependencies]
config = "0.9"
tokio = "0.1.11"
tokio-io = "0.1.9"
tokio-core = "0.1.17"
tokio-codec = "0.1.1"
lazy_static = "1.1.0"
bytes = "0.4.10"
serde = "1.0"
serde_derive = "1.0"
futures = "0.1.25"
nom = "4.1.1"
base64 = "0.10.0"
failure = "0.1.3"
actix = "0.7"
